volexc/tests/ui/mapkey_union_simple.go.out
Error: invalid map key type: unions cannot be used as map keys in Go
    ╭─[mapkey_union_simple.vol:11:12]
    │
 11 │     data: {Value:string}
    │            ──┬──  
    │              ╰──── union 'Value' used here
────╯